; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http2client.c_do_cancel.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http2client.c_do_cancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http2client_stream_t = type { i32, i32 }

@H2O_HTTP2_ERROR_CANCEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @do_cancel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_cancel(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.st_h2o_http2client_stream_t*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to i8*
  %6 = bitcast i8* %5 to %struct.st_h2o_http2client_stream_t*
  store %struct.st_h2o_http2client_stream_t* %6, %struct.st_h2o_http2client_stream_t** %3, align 8
  %7 = load %struct.st_h2o_http2client_stream_t*, %struct.st_h2o_http2client_stream_t** %3, align 8
  %8 = getelementptr inbounds %struct.st_h2o_http2client_stream_t, %struct.st_h2o_http2client_stream_t* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.st_h2o_http2client_stream_t*, %struct.st_h2o_http2client_stream_t** %3, align 8
  %11 = getelementptr inbounds %struct.st_h2o_http2client_stream_t, %struct.st_h2o_http2client_stream_t* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @H2O_HTTP2_ERROR_CANCEL, align 4
  %14 = call i32 @stream_send_error(i32 %9, i32 %12, i32 %13)
  %15 = load %struct.st_h2o_http2client_stream_t*, %struct.st_h2o_http2client_stream_t** %3, align 8
  %16 = call i32 @close_stream(%struct.st_h2o_http2client_stream_t* %15)
  ret void
}

declare dso_local i32 @stream_send_error(i32, i32, i32) #1

declare dso_local i32 @close_stream(%struct.st_h2o_http2client_stream_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
